--- a/src/main/resources/i18n/login.properties
+++ b/src/main/resources/i18n/login.properties
@@ -1,5 +1,5 @@
-login.btn=\u767B\u5F55
-login.password=\u5BC6\u7801
-login.rememberme=\u8BB0\u4F4F\u6211
-login.tip=\u8BF7\u767B\u5F55
-login.username=\u7528\u6237\u540D
+login.btn=登录
+login.password=密码
+login.rememberme=记住我
+login.tip=请登录
+login.username=用户名
