--- a/06.SpringBoot.md
+++ b/06.SpringBoot.md
@@ -2021,6 +2021,8 @@ spring.mvc.date-format=yyyy-MM-dd
 
 ## 1.5.错误处理机制
 
+https://mp.weixin.qq.com/s?__biz=MzIwNDY1NTU1OA==&mid=2247484985&idx=2&sn=cc2d0a9b0c1b8a252110c343ae1e53fe&chksm=973d9890a04a118691027b328db37df363dea14feed0c76ab75c16e767740ef0d6259af4f692&mpshare=1&scene=24&srcid=&sharer_sharetime=1587118111441&sharer_shareid=77789d764b86b768aa16865091e9b882#rd
+
 ### 1.5.1.SpringBoot默认的错误处理机制
 
 默认效果：
@@ -2244,7 +2246,6 @@ public class MyErrorAttributes extends DefaultErrorAttributes {
 
 最终的效果：响应是自适应的，可以通过定制ErrorAttributes改变需要返回的内容，
 
-![](D:/download/springboot核心篇+整合篇-尚硅谷/01尚硅谷SpringBoot核心技术篇/Spring Boot 笔记+课件/Spring Boot 笔记+课件/images/搜狗截图20180228135513.png)
 
 
 
@@ -2769,7 +2770,7 @@ Spring的web模块里面有这个文件：**org.springframework.web.SpringServle
 
 4）、每一个WebApplicationInitializer都调用自己的onStartup；
 
-![](D:/download/springboot核心篇+整合篇-尚硅谷/01尚硅谷SpringBoot核心技术篇/Spring Boot 笔记+课件/Spring Boot 笔记+课件/images/搜狗截图20180302221835.png)
+
 
 5）、相当于我们的SpringBootServletInitializer的类会被创建对象，并执行onStartup方法
 
@@ -3506,7 +3507,7 @@ http://www.mybatis.org/spring-boot-starter/mybatis-spring-boot-autoconfigure/
 
 ###### 1）、SpringData简介
 
-![](D:/download/springboot核心篇+整合篇-尚硅谷/01尚硅谷SpringBoot核心技术篇/Spring Boot 笔记+课件/Spring Boot 笔记+课件/images/搜狗截图20180306105412.png)
+![](https://studypic.oss-cn-shanghai.aliyuncs.com/pic/20200418165513.png)
 
 ###### 2）、整合SpringData JPA
 
@@ -3559,14 +3560,11 @@ spring:
 ## 1.9.整合redis缓存
 
 ```
-Redis常见的五大数据类型
-String（字符串）、List（列表）、Set（集合）、Hash（散列）、ZSet（有序集合）
-stringRedisTemplate.opsForValue()[String（字符串）]
-stringRedisTemplate.opsForList()[List（列表）]
-stringRedisTemplate.opsForSet()[Set（集合）]
-stringRedisTemplate.opsForHash()[Hash（散列）]
-stringRedisTemplate.opsForZSet()[ZSet（有序集合）]
-
+redisTemplate.opsForValue():操作String
+redisTemplate.opsForList():操作List
+redisTemplate.opsForSet():操作Set
+redisTemplate.opsForHash():操作Hash
+redisTemplate.opsForZSet():操作ZSet
 ```
 
 docker安装Redis
@@ -3630,7 +3628,7 @@ public class RedisConfig {
         RedisTemplate<String, Object> template = new RedisTemplate<>();
         // 配置连接工厂
         template.setConnectionFactory(factory);
-        //使用Jackson2JsonRedisSerializer来序列化和反序列化redis的value值（默认使用JDK的序列化方式）
+        // 使用Jackson2JsonRedisSerializer来序列化和反序列化redis的value值（默认使用JDK的序列化方式）
         Jackson2JsonRedisSerializer jacksonSeial = new Jackson2JsonRedisSerializer(Object.class);
         ObjectMapper om = new ObjectMapper();
         // 指定要序列化的域，field,get和set,以及修饰符范围，ANY是都有包括private和public
@@ -3638,25 +3636,29 @@ public class RedisConfig {
         // 指定序列化输入的类型，类必须是非final修饰的，final修饰的类，比如String,Integer等会跑出异常
         om.enableDefaultTyping(ObjectMapper.DefaultTyping.NON_FINAL);
         jacksonSeial.setObjectMapper(om);
+        StringRedisSerializer stringRedisSerializer = new StringRedisSerializer();
         // 值采用json序列化
         template.setValueSerializer(jacksonSeial);
         //使用StringRedisSerializer来序列化和反序列化redis的key值
-        template.setKeySerializer(new StringRedisSerializer());
+        template.setKeySerializer(stringRedisSerializer);
         // 设置hash key 和value序列化模式
-        template.setHashKeySerializer(new StringRedisSerializer());
+        template.setHashKeySerializer(stringRedisSerializer);
         template.setHashValueSerializer(jacksonSeial);
         template.afterPropertiesSet();
         return template;
     }
-    
+
 }
 ```
 
 注入
 
 ```java
-    @Autowired
+		// 提供两个模板
+		@Autowired
+		// 专门用来操作 string 类型
     private StringRedisTemplate stringRedisTemplate;//<String,String>
+
     @Autowired
     private RedisTemplate redisTemplate;//<String,Object>
 ```
@@ -3679,6 +3681,8 @@ redisTemplate.delete(key);
 
 
 ## 1.10.整合RabbitMQ消息
+
+https://mp.weixin.qq.com/s?__biz=MzI3ODg2OTY1OQ==&mid=2247486541&idx=2&sn=cbbb8cb21ad31cf3f65ea9463cd56404&chksm=eb512fb9dc26a6af79bcd05ea0649801638e0babfec2a6f5bb8670981304f4b22a0c7ac9381f&mpshare=1&scene=24&srcid=&sharer_sharetime=1586852742389&sharer_shareid=77789d764b86b768aa16865091e9b882#rd
 
 ### 1.10.1.消息
 
